--- a/frontend/calendar.html
+++ b/frontend/calendar.html
@@ -3,8 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calendrier - OpenDirecte</title>
+    <title>Emploi du Temps - OpenDirecte</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        @keyframes slideIn {
+            from { transform: translateY(-10px); opacity: 0; }
+            to { transform: translateY(0); opacity: 1; }
+        }
+        .animate-slide-in {
+            animation: slideIn 0.3s ease-out;
+        }
+        .time-slot {
+            min-height: 80px;
+        }
+    </style>
 </head>
 <body class="bg-gradient-to-br from-gray-50 to-orange-50 min-h-screen">
     <!-- Navigation -->
@@ -21,7 +33,7 @@
                         <span class="text-xl font-bold bg-gradient-to-r from-orange-600 to-amber-600 bg-clip-text text-transparent">OpenDirecte</span>
                     </a>
                     <span class="text-gray-400">/</span>
-                    <span class="text-gray-700 font-medium">Calendrier</span>
+                    <span class="text-gray-700 font-medium">Emploi du Temps</span>
                 </div>
                 <div class="flex items-center space-x-4">
                     <div class="flex items-center space-x-2 bg-gray-100 px-4 py-2 rounded-lg">
@@ -38,29 +50,148 @@
         </div>
     </nav>
 
-    <div class="container mx-auto px-4 py-8">
+    <div class="container mx-auto px-4 py-8 max-w-7xl">
         <!-- Header Section -->
         <div class="mb-6">
-            <div class="flex items-center space-x-3 mb-2">
-                <div class="bg-gradient-to-br from-orange-500 to-orange-600 p-3 rounded-xl shadow-lg">
-                    <svg class="w-8 h-8 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
-                    </svg>
+            <div class="flex items-center justify-between">
+                <div class="flex items-center space-x-3">
+                    <div class="bg-gradient-to-br from-orange-500 to-orange-600 p-3 rounded-xl shadow-lg">
+                        <svg class="w-8 h-8 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
+                        </svg>
+                    </div>
+                    <div>
+                        <h1 class="text-3xl font-bold text-gray-800">Emploi du Temps</h1>
+                        <p class="text-gray-600">Gérez vos cours et votre planning</p>
+                    </div>
                 </div>
-                <div>
-                    <h1 class="text-3xl font-bold text-gray-800">Calendrier</h1>
-                    <p class="text-gray-600">Événements et emploi du temps</p>
+                <div id="teacherActions" class="hidden">
+                    <button onclick="openAddCourseModal()" class="bg-gradient-to-r from-orange-500 to-orange-600 hover:from-orange-600 hover:to-orange-700 text-white px-6 py-3 rounded-lg font-medium transition-all duration-200 transform hover:scale-105 shadow-lg flex items-center space-x-2">
+                        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6"></path>
+                        </svg>
+                        <span>Ajouter un cours</span>
+                    </button>
                 </div>
             </div>
         </div>
 
-        <!-- Content Card -->
-        <div class="bg-white rounded-2xl shadow-lg p-6 border border-gray-100">
-            <div id="calendarContainer" class="space-y-4">
+        <!-- Week Navigation -->
+        <div class="bg-white rounded-xl shadow-lg p-4 mb-6 border border-gray-100">
+            <div class="flex items-center justify-between">
+                <button onclick="changeWeek(-1)" class="p-2 hover:bg-gray-100 rounded-lg transition-colors">
+                    <svg class="w-6 h-6 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path>
+                    </svg>
+                </button>
+                <div class="text-center">
+                    <h2 id="weekDisplay" class="text-xl font-bold text-gray-800"></h2>
+                    <button onclick="goToToday()" class="text-sm text-orange-600 hover:text-orange-700 font-medium mt-1">Aujourd'hui</button>
+                </div>
+                <button onclick="changeWeek(1)" class="p-2 hover:bg-gray-100 rounded-lg transition-colors">
+                    <svg class="w-6 h-6 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
+                    </svg>
+                </button>
+            </div>
+        </div>
+
+        <!-- Calendar Grid -->
+        <div class="bg-white rounded-2xl shadow-lg border border-gray-100 overflow-hidden">
+            <div id="calendarContainer" class="p-6">
                 <div class="flex items-center justify-center py-12">
                     <div class="animate-spin rounded-full h-8 w-8 border-b-2 border-orange-600"></div>
                     <p class="text-gray-500 ml-3">Chargement du calendrier...</p>
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal Ajouter/Modifier Cours -->
+    <div id="courseModal" class="hidden fixed inset-0 bg-black bg-opacity-50 z-50 flex items-center justify-center p-4">
+        <div class="bg-white rounded-2xl shadow-2xl max-w-2xl w-full max-h-[90vh] overflow-y-auto animate-slide-in">
+            <div class="bg-gradient-to-r from-orange-500 to-orange-600 p-6 text-white">
+                <h2 id="modalTitle" class="text-2xl font-bold">Ajouter un cours</h2>
+            </div>
+            <div class="p-6">
+                <form id="courseForm" class="space-y-4">
+                    <input type="hidden" id="eventId">
+                    
+                    <div>
+                        <label class="block text-sm font-semibold text-gray-700 mb-2">Titre du cours *</label>
+                        <input type="text" id="courseTitle" required class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-orange-500 focus:border-transparent" placeholder="Ex: Mathématiques">
+                    </div>
+
+                    <div>
+                        <label class="block text-sm font-semibold text-gray-700 mb-2">Classes / Groupes * (sélection multiple)</label>
+                        <select id="courseGroup" required multiple size="5" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-orange-500 focus:border-transparent">
+                        </select>
+                        <p class="text-xs text-gray-500 mt-1">Maintenez Ctrl (ou Cmd) pour sélectionner plusieurs classes</p>
+                    </div>
+
+                    <div class="grid grid-cols-2 gap-4">
+                        <div>
+                            <label class="block text-sm font-semibold text-gray-700 mb-2">Date *</label>
+                            <input type="date" id="courseDate" required class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-orange-500 focus:border-transparent">
+                        </div>
+                        <div>
+                            <label class="block text-sm font-semibold text-gray-700 mb-2">Jour de la semaine</label>
+                            <input type="text" id="courseDayName" readonly class="w-full px-4 py-2 border border-gray-200 rounded-lg bg-gray-50 text-gray-600">
+                        </div>
+                    </div>
+
+                    <div class="grid grid-cols-2 gap-4">
+                        <div>
+                            <label class="block text-sm font-semibold text-gray-700 mb-2">Heure de début *</label>
+                            <input type="time" id="courseStartTime" required class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-orange-500 focus:border-transparent">
+                        </div>
+                        <div>
+                            <label class="block text-sm font-semibold text-gray-700 mb-2">Heure de fin *</label>
+                            <input type="time" id="courseEndTime" required class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-orange-500 focus:border-transparent">
+                        </div>
+                    </div>
+
+                    <div>
+                        <label class="block text-sm font-semibold text-gray-700 mb-2">Salle</label>
+                        <input type="text" id="courseLocation" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-orange-500 focus:border-transparent" placeholder="Ex: Salle 201">
+                    </div>
+
+                    <div>
+                        <label class="block text-sm font-semibold text-gray-700 mb-2">Description</label>
+                        <textarea id="courseDescription" rows="3" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-orange-500 focus:border-transparent" placeholder="Notes ou informations supplémentaires..."></textarea>
+                    </div>
+
+                    <div class="border-t pt-4">
+                        <div class="flex items-center mb-3">
+                            <input type="checkbox" id="isRecurring" class="w-5 h-5 text-orange-600 border-gray-300 rounded focus:ring-orange-500">
+                            <label for="isRecurring" class="ml-2 text-sm font-semibold text-gray-700">Cours récurrent</label>
+                        </div>
+                        
+                        <div id="recurringOptions" class="hidden space-y-3 bg-gray-50 p-4 rounded-lg">
+                            <div>
+                                <label class="block text-sm font-semibold text-gray-700 mb-2">Fréquence</label>
+                                <select id="recurrenceType" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-orange-500 focus:border-transparent">
+                                    <option value="weekly">Toutes les semaines</option>
+                                    <option value="biweekly">Toutes les 2 semaines</option>
+                                    <option value="monthly">Tous les mois</option>
+                                </select>
+                            </div>
+                            <div>
+                                <label class="block text-sm font-semibold text-gray-700 mb-2">Jusqu'au</label>
+                                <input type="date" id="recurrenceEnd" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-orange-500 focus:border-transparent">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="flex justify-end space-x-3 pt-4 border-t">
+                        <button type="button" onclick="closeModal()" class="px-6 py-2 border border-gray-300 rounded-lg text-gray-700 font-medium hover:bg-gray-50 transition-colors">
+                            Annuler
+                        </button>
+                        <button type="submit" class="px-6 py-2 bg-gradient-to-r from-orange-500 to-orange-600 hover:from-orange-600 hover:to-orange-700 text-white rounded-lg font-medium transition-all duration-200 transform hover:scale-105 shadow-lg">
+                            Enregistrer
+                        </button>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
