--- a/frontend/index.html
+++ b/frontend/index.html
@@ -76,9 +76,7 @@
 
             <!-- Footer -->
             <div class="mt-6 text-center">
-                <p class="text-sm text-gray-500">
-                    © 2024 OpenDirecte - Licence AGPLv3
-                </p>
+                <p class="text-sm text-gray-500">© 2025 <a href="https://github.com/ruikdev/Opendirecte">OpenDirecte</a> - Licence AGPLv3</p>
             </div>
         </div>
     </div>
